--- a/_includes/article-header.html
+++ b/_includes/article-header.html
@@ -2,8 +2,12 @@
     <figure class="post-article-figure">
         <div class="pos-rel post-article-img-container">
             <div class="post-article-img">
-                <noscript><img src="{{ site.url}}/{{ site.image-path }}{{ page.images.path}}" srcset="" alt=" {{ page.images.caption }} " title="{{ latest.images.caption }}" class="img featured-image"></noscript>
-                <img src="{{ site.url }}/{{ site.image-path }}{{ page.images.path }}" 
+                {%if page.level %}
+                    {%capture img-path %}{{page.image-path | relative_url }}{{ page.image | relative_url }}{%endcapture%}
+                    {% include resp-image.html name=img-path srcset=img-path alt=page.image-alt title=page.image-alt class="post-img" sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px"%}
+                {%else%}
+                <noscript><img src="{{ site.url}}/{{ site.image-path }}{{ page.images.path}}" srcset="" alt=" {{ page.images.caption }} " title="{{ latest.images.caption }}" class= "post-img"></noscript>
+                <!-- <img src="{{ site.url }}/{{ site.image-path }}{{ page.images.path }}" 
                      srcset="{{ site.url }}/{{ site.image-path }}{{ page.images.path }} 410w,
                                 {{ site.url }}/{{ site.image-path }}{{ page.images.path }} 690w,
                                 {{ site.url }}/{{ site.image-path }}{{ page.images.path }} 1380w,
@@ -12,7 +16,9 @@
                                 {{ site.url }}/{{ site.image-path }}{{ page.images.path }} 3200w"
                      sizes ="(min-width: 64em) 1600px, (min-width: 48em) 950px, (min-width: 26.5625em) 690px, 410px" 
                      alt="{{ page.images.caption }}"
-                     class= "post-img">
+                     class= "post-img"> -->
+                     {% include resp-image.html  name=page.images.path srcset=page.images.path  alt=page.images.caption class="post-img" title=page.images.caption  sizes="(min-width: 64em) 1600px, (min-width: 48em) 950px, (min-width: 26.5625em) 690px, 410px" %}
+            {%endif%}
             </div>  
             <div class="img-credit">{{ page.images.credit }}</div>                                  
         </div>
@@ -40,7 +46,7 @@
                 <div class="location">
                     {{ page.location }}
                 </div>
-                <time class="post-pub-date" datetime="" title="{{ page.date  | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>                     
+                <time class="post-pub-date" datetime="{{ page.date  | date_to_xmlschema }}" title="{{ page.date  | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>                     
             </div>
                           
         </div>
