--- a/_includes/feature-hero.html
+++ b/_includes/feature-hero.html
@@ -2,14 +2,16 @@
     {% if forloop.last %}
         <div class="feature-hero module">
             <div class="feature-image image module__visual">
-                <a href="{{ site.baseurl }}{{ feature.url }}" class="image-link">
-                    <img src="{{ site.baseurl}}/{{ feature.image-thumb-path}}/{{ feature.image }}" alt="{{ feature.image-alt }}" class="module__img">
+                <a href="{{ feature.url | relative_url }}" class="image-link">
+                    <!-- <img src="{{ feature.image-thumb-path | relative_url }}/{{ feature.image | relative_url }}" alt="{{ feature.image-alt }}" class="module__img"> -->
+                    {%capture img-path %}{{ feature.image-path | relative_url }}{{ feature.image | relative_url }} {%endcapture%}
+                    {% include resp-image.html name=img-path srcset=img-path alt=feature.image-alt title=feature.image-alt class="module__img" sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px"%}
                     <div class="overlay"></div>
                 </a>
                 <a href="#" class="feature-type type">{{ feature.type }}</a>
             </div>
             <div class="feature-article-details module__article-details">
-                <a href="{{ site.baseurl }}{{ feature.url }}" class="title-link">
+                <a href="{{ feature.url | relative_url }}" class="title-link">
                     <h2 class="feature-title module__title">
                         {{ feature.title }}
                     </h2>
