--- a/_layouts/gallery_index.html
+++ b/_layouts/gallery_index.html
@@ -1,95 +1,63 @@
 ---
-layout: compress
+layout: default
 title: Gallery
 ---
 
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% include head.html %}
-</head>
-<body>
-   <div id="main">
-       <div class="div-wrapper">
-        {% include nav.html %}   
-       </div>
-        <main id="site-content">
-            <div class="homepage">
-                <div class="inner-site-container">
-                    <header class="page-feature-header">
-                        
-                        <!-- <h1 class="page-intro--title"> Photo Gallery</h1>
-                        <div class="type-desc">Potriats, Live shots amd photo essays that put a torch on our world.</div> -->
-                        <div class="container-fluid">
-                            <div class="page-title">
-                                <h1>Photo Gallery</h1>
-                                <p class="page-feature--sub-title">Stories the take a comprehensive look at what defines our history today</p>
-                            </div>                            
-                        </div>
-                    </header>
-                    <div class="features-type feature-page">
-                        <div class="container-block">
-                            <div class="container-clear-fix">
-                                <div class="feature-page-fragments">
-                                    <div class="container-fluid">
+<div class="inner-site-container">
 
-                                        <div class="second-tier module-row feature-module-row">                                    
-                                            {% for gallery in site.gallery %}
-                                            <div class="feature-module module module-with-abstract">
-                                                <div class="module_img module__visual gallery-module-image">
-                                                    <a href="{{ site.baseurl}}{{ gallery.url }}" class="image-link">
-                                                        <span class="sr-only">A short message that displays module title</span>
-                                                        <noscript><img src="{{ site.url}}/{{ site.image-path }}/{{ gallery.cover-image }}" srcset="" alt=" {{ gallery.images.title }} " title="{{ gallery.images.title }}"></noscript>
-                                                        <img class="module_image lazyload"  data-src="{{ site.url}}/{{ site.image-path}}/{{ gallery.cover-image }}" alt="" >
-                                                        <div class="overlay"></div>
-                                                    </a>
-                                                    <a href="#" class="type">Rising</a>
-                                                </div>
-                                                <div class="article-details module__article-details">
-                                                    <a href="{{ site.baseurl}}{{ gallery .url }}" class="title-link module__title-link">
-                                                        <h2 class="module__title">
-                                                            {{ gallery.title }} 
-                                                        </h2>
-                                                    </a>
-                                                    <div class="abstract module__abstract">
-                                                        <p>{{ gallery.description }}</p>
-                                                    </div>
-                                                    <div class="module__meta meta">
-                                                        <div class="bylne module__byline">
-                                                            <ul class="authors module__authors">
-                                                                <li><span class="display-name">
-                                                                    by: {{ gallery.photographer }} /
-                                                                </span></li>
-                                                            </ul>
-                                                        </div>
-                                                        <p class="date feature-module__date">
-                                                            <time class="pub-date" datetime="{{ gallery.date }}" title="{{ gallery.date-title }}">
-                                                                {{ gallery.date }}
-                                                            </time>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="module__highlights"></div>
-                                            </div>
-                                            {% endfor %}
+    {% include page-header.html %}
+
+    <div class="features-type feature-page">
+        <div class="container-block">
+            <div class="container-clear-fix">
+                <div class="feature-page-fragments">
+                    <div class="container-fluid">
+
+                        <div class="second-tier module-row feature-module-row">                                    
+                            {% for gallery in site.gallery %}
+                            <div class="feature-module module module-with-abstract">
+                                <div class="module_img module__visual gallery-module-image">
+                                    <a href="{{ gallery.url | relative_url }}" class="image-link">
+                                        <span class="sr-only">{{ gallery.images.title }}</span>
+                                        <noscript><img src="{{ site.url}}/{{ site.image-path }}/{{ gallery.cover-image }}"  srcset="" alt=" {{ gallery.images.title }} " title="{{ gallery.images.title }}" class="module_image lazyload" ></noscript>
+                                        <!-- <img class="module_image lazyload"  data-src="{{ site.url}}/{{ site.image-path}}/{{ gallery.cover-image }}" alt="" > -->
+                                        {% include resp-image.html type="data-src" name=gallery.cover-image data-srcset=gallery.cover-image data-expand="-90" alt=gallery.images.title title=gallery.images.title class="lazyload blur-up module_image" sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px"%}
+                                        <div class="overlay"></div>
+                                    </a>
+                                    <a href="#" class="type">Rising</a>
+                                </div>
+                                <div class="article-details module__article-details">
+                                    <a href="{{ gallery .url | relative_url }}" class="title-link module__title-link">
+                                        <h2 class="module__title">
+                                            {{ gallery.title }} 
+                                        </h2>
+                                    </a>
+                                    <div class="abstract module__abstract">
+                                        <p>{{ gallery.description }}</p>
+                                    </div>
+                                    <div class="module__meta meta">
+                                        <div class="bylne module__byline">
+                                            <ul class="authors module__authors">
+                                                <li><span class="display-name">
+                                                    by: {{ gallery.photographer }} /
+                                                </span></li>
+                                            </ul>
                                         </div>
+                                        <p class="date feature-module__date">
+                                            <time class="pub-date" datetime="{{ gallery.date }}" title="{{ gallery.date-title }}">
+                                                {{ gallery.date }}
+                                            </time>
+                                        </p>
                                     </div>
                                 </div>
+                                <div class="module__highlights"></div>
                             </div>
+                            {% endfor %}
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
-        </main>
-
-
-        
-    {% include footer.html %}
-   </div>
-   {% include mobi-footer.html %}
-   <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
-   <script src="{{ site.baseurl }}/assets/js/horizontal-mod.js "></script>
-   <script src="{{ site.baseurl }}/assets/js/Vendor/lazysizes.min.js"></script>
-</body>
-</html>
+        </div>
+    </div>
+</div>    
