--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,41 +1,19 @@
 ---
-layout: compress
+layout: default
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% include head.html %}
-</head>
-<body>
-   <div id="main">
-       <div class="div-wrapper">
-        {% include nav.html %}   
-       </div>
-        
-       <main id="site-content">
-            <div class="homepage">
-                <div class="inner-site-container post-container">
-                    <article class="post--article-content">
-                        <div class="post-article-mobile-header"></div>
-                        {% include article-header.html %}
-                        {% include article-body.html %}
-                        {% include article-footer.html %}
-                    </article>
-                    {% include relatedposts.html %}
-                    <div class="article-footer--related">
-                        <div class="article-feed">
-                            <h6 class="post-footer-titles"><svg width="10" height="9" viewBox="0 0 12 11" xmlns="http://www.w3.org/2000/svg"><path d="M5 0h2v8H5z" fill="var(--color,#000)"></path><path d="M6 7.828l4.243-4.242L11.657 5 7.414 9.243 6 10.657.343 5l1.414-1.414L6 7.828z" fill="var(--color,#000)"></path></svg> more from nwangelle post </h6>
-                            {% include more-news.html %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-       </main>
-       {% include footer.html %}
-   </div>
-   {% include mobi-footer.html %}
-   <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
-   <script src="{{ site.baseurl }}/assets/js/custom-infinite-scroll.js "></script>
-   <script src="{{ site.baseurl }}/assets/js/Vendor/lazysizes.min.js"></script> 
-</body>
-</html>
+
+<div class="inner-site-container post-container">
+    <article class="post--article-content">
+        <div class="post-article-mobile-header"></div>
+        {% include article-header.html %}
+        {% include article-body.html %}
+        {% include article-footer.html %}
+    </article>
+    {% include relatedposts.html %}
+    <div class="article-footer--related">
+        <div class="article-feed">
+            <h6 class="post-footer-titles"><svg width="10" height="9" viewBox="0 0 12 11" xmlns="http://www.w3.org/2000/svg"><path d="M5 0h2v8H5z" fill="var(--color,#000)"></path><path d="M6 7.828l4.243-4.242L11.657 5 7.414 9.243 6 10.657.343 5l1.414-1.414L6 7.828z" fill="var(--color,#000)"></path></svg> more from nwangelle post </h6>
+            {% include more-news.html %}
+        </div>
+    </div>
+</div>
