--- a/_sass/mobile-nav.scss
+++ b/_sass/mobile-nav.scss
@@ -5,7 +5,7 @@
     }
     & .mobile-nav{
         position: fixed;
-        bottom: 0;
+        bottom: -1px;
         width: 100%;
         background-color: var(--clr-bg-1);
         z-index: 400;
